<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="30dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/easee_logo"
        android:contentDescription="App Logo"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_margin="60dp" />

    <!-- Title Text -->
    <LinearLayout
        android:id="@+id/titleArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/logoImage"
        android:padding="8dp"
        android:layout_marginBottom="16dp">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color_text"
        android:layout_marginBottom="24dp"/>

    <!-- Title Description -->
    <TextView
        android:id="@+id/titleDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_desc"
        android:textSize="14sp"
        android:textColor="@color/primary_color_text"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>
    </LinearLayout>
    <!-- Email EditText with Microphone Icon -->
    <LinearLayout
        android:id="@+id/emailArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/grey_rounded_circle"
        android:layout_below="@id/titleArea"
        android:padding="8dp"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/user_email_hint"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <ImageButton
            android:id="@+id/microphoneButton"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_microphone"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Voice Input"
            android:scaleType="fitCenter" />
    </LinearLayout>





    <!-- Sign Up Button -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Send Verification"
        android:backgroundTint="@color/primary_color"
        android:textColor="@color/white"
        android:layout_below="@id/emailArea"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp" />





</RelativeLayout>
