<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:titleTextColor="@android:color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <!-- Question mark button -->
        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Help"
            android:src="@drawable/ic_help"
            android:padding="8dp"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- Profile Picture -->
    <RelativeLayout
        android:id="@+id/profileImageArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_default_user"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"
            android:background="@drawable/circular_image"
            android:clipToOutline="true"/>

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignBottom="@id/profileImage"
            android:layout_alignEnd="@id/profileImage">

            <!-- Circle background with grey border -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_circle_with_border" />

            <!-- Camera icon on top of the circle background -->
            <ImageView
                android:id="@+id/cameraIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_camera"
                android:layout_gravity="center" />
        </FrameLayout>

    </RelativeLayout>

    <!-- Name Input Field -->

    <!-- Phone Number Field with Country Code -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/profileImageArea"
        android:hint="@string/user_name_hint"
        android:inputType="textPersonName"
        android:background="@drawable/grey_rounded_circle"
        android:padding="12dp" />

    <LinearLayout
        android:id="@+id/phoneNumberArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/countryCodeGroup"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/grey_rounded_circle">

        <!-- Country Code -->
        <ImageView
            android:id="@+id/countryFlag"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_malaysia" />

        <Spinner
            android:id="@+id/countryCodeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

        <!-- Phone Number -->
        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:hint="12345678"
            android:background="@drawable/grey_rounded_circle"
            android:inputType="phone"
            android:padding="12dp" />
    </LinearLayout>

    <!-- Email Input Field -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberArea"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/grey_rounded_circle"
        tools:ignore="NotSibling" />

    <!-- Password Input Field -->
    <LinearLayout
        android:id="@+id/passwordArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/emailEditText"
        android:orientation="horizontal"
        android:padding="0dp"
        android:background="@drawable/grey_rounded_circle">

        <!-- Password EditText -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:padding="12dp"/>

        <!-- Toggle Button for Show/Hide Password -->
        <ImageButton
            android:id="@+id/passwordToggle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_visiblity_off"
            android:contentDescription="toggle password visibility"
            android:scaleType="fitCenter" />
    </LinearLayout>



    <!-- Save Changes Button -->
    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordArea"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:backgroundTint="#38698C"
        android:text="@string/save_changes"
        android:textColor="#FFFFFF"
        android:padding="12dp" />

</RelativeLayout>
