<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".UserProfileActivity">

    <!-- GestureOverlayView for custom gestures-->
    <android.gesture.GestureOverlayView
        android:id="@+id/gestureOverlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:eventsInterceptionEnabled="true"
        android:gestureStrokeType="multiple"
        android:fadeOffset="1000"
        android:background="#00000000" />

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:titleTextColor="@android:color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <!-- Question mark button -->
        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Help"
            android:src="@drawable/ic_help"
            android:padding="8dp"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_default_user"
        android:background="@drawable/circular_image"
        android:clipToOutline="true"/>

    <!-- Name -->
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <!-- Email and Phone Number -->
    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/user_email"
        android:textSize="14sp"
        android:textColor="#666666"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/user_phone_number"
        android:textSize="14sp"
        android:textColor="#666666"
        android:textAlignment="center" />

    <!-- Edit Profile Button -->
    <LinearLayout

        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/userPhone"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="Edit Profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Edit Profile"
            android:textSize="16sp"
            android:textColor="#000000" />


    </LinearLayout>
    <!-- Horizontal line separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/editProfileButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="#CCCCCC" />


    <!-- View History Button -->
    <LinearLayout
        android:id="@+id/viewHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/editProfileButton"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_history"
            android:contentDescription="View History" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="View History"
            android:textSize="16sp"
            android:textColor="#000000" />
    </LinearLayout>

    <!-- Horizontal line separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/viewHistoryButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="#CCCCCC" />
    <!-- Settings Button -->
    <LinearLayout
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/viewHistoryButton"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_setting"
            android:contentDescription="Settings" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Setting"
            android:textSize="16sp"
            android:textColor="#000000" />
    </LinearLayout>

    <!-- Horizontal line separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settingsButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="#CCCCCC" />
    <!-- Log Out Button -->
    <LinearLayout
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/settingsButton"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_logout"
            android:contentDescription="Log Out" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Log Out"
            android:textSize="16sp"
            android:textColor="#000000" />
    </LinearLayout>

</RelativeLayout>
